# SAC-Predictions-Demo

./: .coverage  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  app.py  config.py  eval_questions_answers.csv  mcp_server.py  pyproject.toml  roadmap.md  tasks.md
.streamlit/: config.toml
config/: __init__.py  assumptions.py  core.py  validation_caps.py
data/: llm_last_raw_response.txt
demo/: __init__.py  assistant_v3_eval.py  auth_check.py  des_check.py  forecast.py  llm_check.py  llm_intent_check.py  llm_ping.py  llm_scenario_check.py  llm_scenario_check_v3.py  llm_two_step_smoke.py  query.py  refresh.py  run.py  scenario_smoke_v3.py  scenarios.py  smoke.py  smoke_app.py  smoke_scenarios.py
docs/: access.md  ai_assistant_two_step.md  compiler_rules.md  data_contract.md  dataset_binding.md  demo_checklist.md  demo_script.md  evals_assistant_v3.md  forecast.md  hr_cost_metric.md  intent_schema.md  narrative.md  qa_sap_like_checklist.md  qa_two_step_assistant.md  qa_ui_checklist.md  scenario_assistant.md  scenario_engine_knob_support.md  scenario_engine_v3.md  scenario_presets_v3.md  scenarios.md
evals/: README.md  __init__.py  assistant_v3_eval.py  generate_answer.py  grader.py  grader_prompt.md  load_evalset.py  release_gate.py  report.py  run_consulting_evals.py  run_evals.py
forecast/: __init__.py  baseline.py
llm/: anthropic_provider.py  intent_interpreter.py  intent_schema.py  json_parse.py  openai_provider.py  provider.py  scenario_assistant_v3.py  validate_suggestion.py  validate_v3.py  validation_result.py
model/: __init__.py  (+2 more)
(+126 files in other folders)
