[project]
name = "sac-predictions-demo"
version = "0.1.0"
description = "SAC Predictions Demo"
authors = [{ name = "SAC Demo Team", email = "devnull@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
